// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider is rendered 1`] = `
<i
  className="slider"
  currentSlide={0}
  disableAnimation={false}
  disableKeyboard={false}
  dragEnabled={true}
  dragStep={1}
  hasMasterSpinner={false}
  infinite={false}
  interval={5000}
  isIntrinsicHeight={true}
  isPageScrollLocked={false}
  isPlaying={false}
  lockOnWindowScroll={false}
  naturalSlideHeight={40}
  naturalSlideWidth={50}
  orientation="horizontal"
  playDirection="forward"
  step={1}
  tag="div"
  totalSlides={3}
  touchEnabled={true}
  visibleSlides={6}
>
  <i>
    <i
      index={0}
      key="1"
    >
      <div
        className="categoryCard"
        style={
          Object {
            "backgroundImage": "url(https://www.themealdb.com/images/category/beef.png)",
          }
        }
      >
        <div
          className="cardOverlay"
          data-testid="recipe-card-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <h3
            className="title"
          >
            Beef
          </h3>
        </div>
      </div>
    </i>
    <i
      index={1}
      key="2"
    >
      <div
        className="categoryCard"
        style={
          Object {
            "backgroundImage": "url(https://www.themealdb.com/images/category/chicken.png)",
          }
        }
      >
        <div
          className="cardOverlay"
          data-testid="recipe-card-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <h3
            className="title"
          >
            Chicken
          </h3>
        </div>
      </div>
    </i>
    <i
      index={2}
      key="3"
    >
      <div
        className="categoryCard"
        style={
          Object {
            "backgroundImage": "url(https://www.themealdb.com/images/category/dessert.png)",
          }
        }
      >
        <div
          className="cardOverlay"
          data-testid="recipe-card-2"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
        >
          <h3
            className="title"
          >
            Dessert
          </h3>
        </div>
      </div>
    </i>
  </i>
  <i
    className="backButton controlButton"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            320,
            512,
            Array [],
            "f053",
            "M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z",
          ],
          "iconName": "chevron-left",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
  </i>
  <i
    className="nextButton controlButton"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            320,
            512,
            Array [],
            "f054",
            "M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z",
          ],
          "iconName": "chevron-right",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
  </i>
</i>
`;

exports[`Slider is rendered with no items 1`] = `
<i
  className="slider"
  currentSlide={0}
  disableAnimation={false}
  disableKeyboard={false}
  dragEnabled={true}
  dragStep={1}
  hasMasterSpinner={false}
  infinite={false}
  interval={5000}
  isIntrinsicHeight={true}
  isPageScrollLocked={false}
  isPlaying={false}
  lockOnWindowScroll={false}
  naturalSlideHeight={40}
  naturalSlideWidth={50}
  orientation="horizontal"
  playDirection="forward"
  step={1}
  tag="div"
  totalSlides={0}
  touchEnabled={true}
  visibleSlides={6}
>
  <i />
  <i
    className="backButton controlButton"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            320,
            512,
            Array [],
            "f053",
            "M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z",
          ],
          "iconName": "chevron-left",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
  </i>
  <i
    className="nextButton controlButton"
  >
    <FontAwesomeIcon
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            320,
            512,
            Array [],
            "f054",
            "M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z",
          ],
          "iconName": "chevron-right",
          "prefix": "fas",
        }
      }
      inverse={false}
      listItem={false}
      mask={null}
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={false}
      swapOpacity={false}
      symbol={false}
      title=""
      transform={null}
    />
  </i>
</i>
`;
